--- a/grantera/css/style.css
+++ b/grantera/css/style.css
@@ -2,32 +2,21 @@ a{
   color:#555;
 }
 
-a:hover{
-  text-decoration:none;
-    color: #dc3545;
+p{
+    text-align:justify;
+}
+
+h1{
+    font-size:1.8em;
 }
 
 .bg-light{
   background: linear-gradient(to bottom, rgba(251,252,253,1) 0%,rgba(233,238,241,1) 26%,rgba(233,238,241,1) 26%,rgba(244,246,248,1) 76%,rgba(247,251,253,1) 100%);
 }
 
-.nav-link {
-  transition:0.5s;
-  font-weight:450;
-}
-
-.nav-link:hover{
-  box-shadow:
-  inset 0 -0.05em 0px red,
-   inset 0 -0.01em 0px #999;
-
-   color:red !important;
-}
-
-
 .container{
-  padding-right: 0px !important;
-  padding-left: 0px !important;
+  /* padding-right: 0px !important;
+  padding-left: 0px !important; */
 }
 
 .topicon{
@@ -84,3 +73,15 @@ a:hover{
 .topsectionimg:hover{
   opacity:1;
 }
+
+@media (min-width: 992px) {
+    .widemargin{
+        padding-left:50px;
+        padding-right:50px;
+        /* margin:0px; */
+    }
+  .navbar-expand-md {
+      /* padding:0px;
+      margin:0px; */
+      /* background:white; */
+  }
