--- a/grantera/css/brand.css
+++ b/grantera/css/brand.css
@@ -2,30 +2,29 @@
 @import url(https://fonts.googleapis.com/css?family=Squada+One);
 
 
-.thisbrand{
-    font-weight:bold;
+#brand{
   font-family: 'Open Sans', sans-serif;
   color: #555;
-  text-shadow: #EDEDED 3px 2px 0;
+  text-shadow: #EDEDED 3px 2px 2px;
   font-size:30px;
   font-weight: 800;
   position: relative;
+   z-index:100;
 }
-.thisbrand:after {
+#brand:after {
   content:"Spółka i S-ka";
   position: absolute;
-  left: -2px;
-  top: 0px;
+  left: -1px;
+  top: 2px;
   z-index:-50;
 }
-.thisbrand:after {
-    z-index:1000;
+#brand:after {
+    z-index:-50;
   /*background: url(https://subtlepatterns.com/patterns/crossed_stripes.png) repeat;*/
   background-image: -webkit-linear-gradient(left top, transparent 0%, transparent 25%, #555 25%, #555 50%, transparent 50%, transparent 75%, #555 75%);
   background-size: 4px 4px;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  z-index: -50;
   display: block;
   text-shadow: none;
 }
