--- a/bertrand/views/navbar.html
+++ b/bertrand/views/navbar.html
@@ -1,16 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css">
-
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-  <title>index.html</title>
-</head>
-<body>
 
   <nav id="navbar" class="navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand" href="#"><img src="https://www.bertrand.pl/images/02_main_page/bb_main_logo.jpg" alt=""></a>
@@ -20,7 +7,7 @@
 
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link dropdown-toggle" href="#">Oferta <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
@@ -48,15 +35,14 @@
         </li>
       </ul>
     </div>
-<ul class="navbar-nav ml-auto">
-<li class="nav-item"><a CLASS="nav-link"><i id="phone" class="fas fa-phone"></i> +48 506 xxx xxx</a></li
-</ul>
-</nav>
-
-
-
-<script src="js/jquery-3.3.1.js"></script>
-  <script src="https://unpkg.com/popper.js"></script>
-<script src="js/bootstrap.min.js"></script>
-</body>
-</html>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item mx-2"><a id="phonetext" class="nav-link"><i id="phone" class="fas fa-phone"></i> +48 506 XXX XXX</a></li>
+      <li class="nav-item mx-1">
+        <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href=""><img src="images/pl.gif" alt=""></a></li>
+            <li class="nav-item"><a class="nav-link" href=""><img src="images/de.gif" alt=""></a></li>
+            <li class="nav-item"><a class="nav-link" href=""><img src="images/en.gif" alt=""></a></li>
+        </ul>
+      </li>
+    </ul>
+  </nav>
