--- a/bertrand/views/carousel.html
+++ b/bertrand/views/carousel.html
@@ -42,13 +42,8 @@
           <button class="btn btn-danger carousel-button">Dowiedz się więcej</button>
 
         </div>
-        <div class="col-md-3" id="slidebg-3" style="height:300px">
-
-
-        </div>
-        <div class="col-md-1">
-
-        </div>
+        <div class="col-md-3" id="slidebg-3"></div>
+        <div class="col-md-1"></div>
       </div>
     </div>
   </div>
