--- a/bertrand/views/carousel.html
+++ b/bertrand/views/carousel.html
@@ -42,7 +42,7 @@
           <button class="btn btn-danger carousel-button">Dowiedz się więcej</button>
 
         </div>
-        <div class="col-md-3" id="slidebg-3"></div>
+        <div class="col-md-3 d-flex align-items-center"><div id="slidebg-3"></div></div>
         <div class="col-md-1"></div>
       </div>
     </div>
