--- a/bertrand/views/top.html
+++ b/bertrand/views/top.html
@@ -1,9 +1,9 @@
-<section id="mid" class="container-fluid">
+<section id="top" class="container-fluid">
   <div class="container">
     <div class="row">
       <div class="col-md-4">
         <div>
-          <h3><i class="h-initial">O</i>ferta XXX</h3>
+          <h1><i class="h-initial">O</i>ferta XXX</h1>
           <p> Produkty XXX charakteryzują się najwyższą jakością, potwierdzoną certyfikatami. Do produkcji stolarki firma stosuje nowoczesne technologie oraz wykorzystuje szeroką gamę materiałów: różne gatunki drewna, systemy profili PVC i
             aluminiowych, a także materiały drewniano-aluminiowe i PVC-aluminiowe</p>
         </div>
