--- a/bertrand/css/effects.css
+++ b/bertrand/css/effects.css
@@ -1,3 +1,24 @@
+.emptywrapper{
+    margin:0px;
+    padding:0px;
+}
+
+
+:root{
+    --mylight:#DDDDDD;
+}
+
+.mylight{
+    color:var(--mylight) !important;
+    border-color:var(--mylight) !important;
+    border:1px var(--mylight) solid !important;
+
+}
+
+.border{
+    border:1px black solid;
+}
+
 
 .btn-moje {
   display: inline-block;
@@ -44,6 +65,15 @@ width: 490px;
 border-top: 1px solid #444444;
 margin-top: 16px;
 margin-left: -500px;
+}
+
+.kreska::before{
+    content: '';
+  position: absolute;
+  width: 100px;
+  border-top: 2px solid #444444 ;
+  margin-top: 16px;
+  margin-left: 0px;
 }
 
 .magn{
