--- a/bertrand/css/topmid.css
+++ b/bertrand/css/topmid.css
@@ -43,11 +43,48 @@ padding-top:10px;
 
 .btn-mylight{
   background-color: rgba(200,200,200,0.8) !important;
-  color:var(--gray-dark);
-  
+  color:var(--gray-dark) ;
+
+
 }
 
 .btn-mylight:hover{
   background-color: #999!important;
   color:black;
+}
+
+#news .newsborders .row{
+    border-top:1px var(--mylight) dotted;
+    border-bottom:1px var(--mylight) dotted;
+}
+
+#news .title{
+    letter-spacing:5px;
+    font-size:1.5rem;
+}
+
+#news .date{
+
+}
+
+
+#news .readmore {
+
+    color:var(--gray);
+  transition:0.5s;
+  font-weight:450;
+}
+
+#news .readmore:hover{
+color:var(--gray-dark);
+  box-shadow:
+  inset 0 -0.05em 0px red,
+   inset 0 -0.01em 0px #999;
+   color:red !important;
+}
+
+@media(min-width:600px){
+    .responsetest{
+        font-size:30px;
+    }
 }
