--- a/bertrand/css/effects.css
+++ b/bertrand/css/effects.css
@@ -1,20 +1,27 @@
+:root{
+    --mylight:#DDDDDD;
+}
+
+
+
 .emptywrapper{
     margin:0px;
     padding:0px;
 }
 
 
-:root{
-    --mylight:#DDDDDD;
-}
 
 .mylight{
     color:var(--mylight) !important;
     border-color:var(--mylight) !important;
     border:1px var(--mylight) solid !important;
-
 }
 
+.mylight::before{
+  color:var(--mylight) !important;
+  border-color:var(--mylight) !important;
+  border:1px var(--mylight) solid !important;
+}
 .border{
     border:1px black solid;
 }
@@ -67,13 +74,19 @@ margin-top: 16px;
 margin-left: -500px;
 }
 
-.kreska::before{
+.kreska{
+  /* display:inline-block; */
+  margin:auto;
+  position:relative;
+}
+
+.kreska::after{
     content: '';
   position: absolute;
-  width: 100px;
-  border-top: 2px solid #444444 ;
-  margin-top: 16px;
-  margin-left: 0px;
+  width: 9vw;
+  border-top: 1px dotted #444444 ;
+  margin-top: 30px;
+  margin-left: -130px;
 }
 
 .magn{
