--- a/bertrand/css/effects.css
+++ b/bertrand/css/effects.css
@@ -2,6 +2,15 @@
     --mylight:#DDDDDD;
 }
 
+a{
+    color:inherit;
+    text-decoration:none;
+}
+
+a:hover{
+    text-decoration:none;
+}
+
 
 
 .emptywrapper{
