--- a/bertrand/css/carousel.css
+++ b/bertrand/css/carousel.css
@@ -5,18 +5,18 @@
 .carousel-control-next-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='#333' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3e%3c/svg%3e");
 
-
 }
+
+.carousel-control-next-icon,.carousel-control-prev-icon{
+    width:calc(15px + 0.3 * 3vw );
+    height:calc(15px + 0.3 * 3vw);
+    filter: drop-shadow(#333 1px 1px 1px);
+}
+
+
 
 .carousel-indicators li{
   background-color:var(--danger)
-}
-
-
-.carousel-control-next-icon,.carousel-control-prev-icon{
-    width:30px;
-    height:30px;
-    filter: drop-shadow(#333 1px 1px 1px);
 }
 
 .carousel-title{
@@ -56,8 +56,8 @@
 
 #slidebg-3{
   background:url(../images/slide3.png) no-repeat center center / cover;
-  background-color: rgba(50,50,50,0.1) !important;
-  background-blend-mode: color-burn !important;
+  /* background-color: rgba(50,50,50,0.1) !important;
+  background-blend-mode: color-burn !important; */
   width: calc(100px + 200 * ((100vw - 320px) / 680));
   height: calc(100px + 200 * ((100vw - 320px) / 680));
   background-repeat:no-repeat;
@@ -71,9 +71,19 @@
 }
 
 #carouseltop p {
-   font-size: calc(10px + 7 * ((100vw - 320px) / 680)) !important;
+   font-size: calc(6px + 7 * ((100vw - 320px) / 680)) !important;
 }
 
 #carouseltop .carousel-text {
-   font-size: calc(8px + 7 * ((100vw - 320px) / 680)) !important;
+   font-size: calc(6px + 7 * ((100vw - 320px) / 680)) !important;
+}
+
+#slide3{
+    display:flex;
+    justify-content:space-around;
+}
+
+.cleft{
+    width:15%;
+    height:100%;
 }
