--- a/bertrand/views/carousel.html
+++ b/bertrand/views/carousel.html
@@ -1,8 +1,8 @@
 <div id="carouseltop" class="carousel slide" data-ride="carousel" data-interval="20000">
   <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouseltop" data-slide-to="0" class="active"></li>
+    <li data-target="#carouseltop" data-slide-to="1"></li>
+    <li data-target="#carouseltop" data-slide-to="2"></li>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active" id="slide1">
@@ -34,17 +34,21 @@
     </div>
     <div class="carousel-item">
       <div class="slidebg">
-        <div class="col-md-1"></div>
-        <div class="col-md-6" style="margin:auto">
-          <p class="carousel-title">Okna rolety, drzwi i brama garażowa w tym samym kolorze</p>
-          <p></p>
-          <p class="carousel-text">Zależy  ci na spójnym wyglądzie okien, rolet, drzwi i bramy garażowej? W XXX możesz tworzyć zestawy produktów w jednym modnym kolorze, np. DB703</p>
-          <button class="btn btn-danger carousel-button">Dowiedz się więcej</button>
+        <div class="container" id="slide3">
+        <div class="cleft">
 
         </div>
-        <div class="col-md-3 d-flex align-items-center"><div id="slidebg-3"></div></div>
-        <div class="col-md-1"></div>
+        <div class="d-flex align-items-center">
+            <div class="">
+              <p class="carousel-title">Okna rolety, drzwi i brama garażowa w tym samym kolorze</p>
+              <p></p>
+              <p class="carousel-text">Zależy  ci na spójnym wyglądzie okien, rolet, drzwi i bramy garażowej? W XXX możesz tworzyć zestawy produktów w jednym modnym kolorze, np. DB703</p>
+              <button class="btn btn-danger carousel-button">Dowiedz się więcej</button>
+            </div>
+        </div>
+        <div class="d-flex align-items-center hidden-md-down"><div id="slidebg-3"></div></div>
       </div>
+    </div>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouseltop" role="button" data-slide="prev">
