--- a/bertrand/views/navbar.html
+++ b/bertrand/views/navbar.html
@@ -1,5 +1,5 @@
 
-  <nav id="navbar" class="navbar navbar-expand-lg navbar-light">
+  <nav id="navbar" class="navbar navbar-expand-md navbar-light">
     <a class="navbar-brand" href="#"><img src="https://www.bertrand.pl/images/02_main_page/bb_main_logo.jpg" alt=""></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
