--- a/doorplast/css/style.css
+++ b/doorplast/css/style.css
@@ -1,9 +1,175 @@
+/* navbar */
+:root{
+  --mypink: #ED1846;
+  --mygray: #c3cbd2;
+}
+
+p{
+  text-align:justify;
+}
+
 .container{
 
 }
 
 @media(min-width:1200px){
-  .container{
-    max-width:1280px !important;
+  #navbar .container{
+    /* max-width:1200px !important; */
   }
+}
+
+@media(min-width:900px){
+
+}
+
+
+.dropdown-menu{
+    display:block;
+    opacity:0;
+    z-index:-1000;
+    transition:0.5s;
+}
+
+.dropdown:hover .dropdown-menu{
+    opacity:1;
+    z-index:1000;
+}
+
+/*karuzela*/
+.carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='white' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3e%3c/svg%3e");
+}
+
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='white' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3e%3c/svg%3e");
+
+}
+
+.carousel-control-next-icon,.carousel-control-prev-icon{
+    width:calc(15px + 0.8 * 3vw );
+    height:calc(15px + 0.8 * 3vw);
+    filter: drop-shadow(#333 1px 1px 1px);
+}
+
+.carousel-indicators li{
+  background-color:var(--danger)
+}
+
+.slidebg {
+  padding-left:15%;padding-right:15%;
+  position:relative;
+  display:flex;
+  height:calc(300px + 10vw) !important ;
+  width:100% !important;
+  align-items:center;
+}
+
+#slidebg-1{
+  background:url(../images/slide1.jpg) no-repeat center center / cover;
+}
+
+#slidebg-2{
+  background:url(../images/slide2.jpg) no-repeat center center / cover;
+}
+
+#slidebg-3{
+  background:url(../images/slide3.jpg) no-repeat center center / cover;
+}
+
+#slidebg-4{
+  background:url(../images/slide4.jpg) no-repeat center center / cover;
+}
+
+.myfluid{
+  max-width:100% !important;
+  height:auto !important;
+}
+
+#carouseltop h2{
+  color:white;
+  font-size:calc(12px + 3vw);
+  filter: drop-shadow(2px 2px 1px rgba(200,100,100,0.8 ));
+}
+
+.mybutton{
+background:var(--mypink);
+border:1px white solid;
+color:white;
+padding:6px 10px 6px 10px;
+transition:0.8s;
+}
+
+.mybutton2{
+  background:var(--mypink);
+  border:1px white solid;
+  color:white;
+  padding:10px 15px 10px 15px;
+  transition:0.8s;
+}
+
+.mybutton:hover{
+  background:var(--dark);
+}
+
+.carousel-indicators li{
+  height:7px !important;
+  /* border-radius:50%; */
+}
+
+.hpink{
+  color:var(--mypink);
+  text-align:center;
+  font-size:1.8rem;
+  font-weight:bold;
+
+}
+
+.hdark{
+  color:var(--dark);
+  text-align:center;
+  font-size:1.8rem;
+  font-weight:bold;
+
+}
+
+.krecha{
+  display:block;
+  margin:auto;
+  margin-top:30px;
+  margin-bottom:30px;
+  border-bottom:3px var(--mygray) solid;
+  width:80px;
+}
+
+/* h1:after{
+  content:"";
+  display:block;
+  border-bottom:2px gray solid;
+  width:50px;
+  height:3px;
+} */
+
+#obrazki img{
+  max-width:100%;
+  height:auto;
+  border:8px var(--mygray) solid;
+}
+#obrazki figure{
+  transition:0.7s;
+  /* display:flex;
+  justify-content: center; */
+}
+
+#obrazki figcaption{
+  font-size:1.6rem;
+  text-align:center;
+}
+
+#obrazki img{
+  margin:auto;
+  transition:0.7s;
+}
+
+#obrazki figure:hover{
+  opacity:0.6;
 }
