--- a/doorplast/views/navbar.html
+++ b/doorplast/views/navbar.html
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>doorplast kopia</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  </head>
-  <body>
-    <div class="container">
+<div class="container">
 
 <nav id="navbar" class="navbar navbar-expand-md navbar-light">
 
@@ -15,7 +6,7 @@
 <a class="navbar-brand" href="#"><img src="http://www.vetrex.slupsk.pl/wp-content/themes/vetrex/images/header_top_logo_vetrex.png" alt=""></a>
 
 <div class="collapse navbar-collapse">
-<ul class="navbar-nav ml-auto">
+<ul class="navbar-nav ml-auto" style="margin-right:20px">
 <li class="nav-item"><a href="#" class="nav-link">Strona główna</a></li>
 <li class="nav-item"><a href="#" class="nav-link">O firmie</a></li>
 <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -34,12 +25,5 @@
 <li class="nav-item"><a href="#" class="nav-link">Kontakt </a></li>
 </ul>
 </div>
-
 </nav>
 </div>
-
-<script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js">
-
-</script>
-  </body>
-</html>
